# gcc

./: .gitignore  CMakeLists.txt  README.md
apps/compiler/: main.cpp
docs/: grammar.ebnf
examples/: example1.asm
include/gcc/ast/: ConstantExpr.hpp  Expression.hpp  FunctionStmt.hpp  ProgramAST.hpp  ReturnStmt.hpp  Statement.hpp  UnaryExpr.hpp
include/gcc/diagnostics/: Diagnostic.hpp  DiagnosticEngine.hpp
include/gcc/diagnostics/consumers/: ConsoleDiagnosticConsumer.hpp  DiagnosticConsumer.hpp
include/gcc/diagnostics/formatters/: DiagnosticFormatter.hpp  PlainDiagnosticFormatter.hpp
include/gcc/driver/: CommandLineParser.hpp  CompilerContext.hpp  CompilerDriver.hpp  CompilerOptions.hpp
include/gcc/lexer/: Lexer.hpp  Token.hpp
include/gcc/parser/: Parser.hpp
include/gcc/pipeline/: LexerPass.hpp  ParserPass.hpp  Pass.hpp  Pipeline.hpp
include/gcc/source/: SourceLocation.hpp  SourceManager.hpp
include/gcc/visitors/: AstPrinter.hpp  MASMCodeGenerator.hpp  MASMx64CodeGenerator.hpp  MASMx86CodeGenerator.hpp  Visitor.hpp
src/: Scanner.cpp  Scanner.h  compiler.c  compiler.h  main.c  main.cpp  scanner.c  scanner.h  token.c  token.h
src/core/exception/: ScannerException.h
src/core/token/: Token.h  TokenKind.h  TokenUtil.h
src/gcc/ast/: ConstantExpr.cpp  FunctionStmt.cpp  ProgramAST.cpp  ReturnStmt.cpp  UnaryExpr.cpp
src/gcc/diagnostics/: DiagnosticEngine.cpp
src/gcc/diagnostics/consumers/: ConsoleDiagnosticConsumer.cpp
src/gcc/diagnostics/formatters/: PlainDiagnosticFormatter.cpp
src/gcc/driver/: CommandLineParser.cpp  CompilerContext.cpp  CompilerDriver.cpp
src/gcc/lexer/: Lexer.cpp
src/gcc/parser/: Parser.cpp
src/gcc/pipeline/: LexerPass.cpp  ParserPass.cpp  Pipeline.cpp
src/gcc/source/: SourceManager.cpp
src/gcc/visitors/: AstPrinter.cpp  MASMCodeGenerator.cpp  MASMx64CodeGenerator.cpp  MASMx86CodeGenerator.cpp
